--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
         <button id="evaluate-btn">Check</button>
         <div id="output"></div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
