--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 <body>
     <div class="container">
         <h1 class="heading">Evaluate your stocks</h1>
-        <label>
-            <input type="number" id="initial-price">Enter the inital stock price
+        <label for="initial-price">
+            Enter the inital stock price
+            <input type="number" id="initial-price">
         </label>
-        <label>
-            <input type="number" id="quantity">Enter the quantity of the stock
+        <label for="quantity">
+            Enter the quantity of the stock
+            <input type="number" id="quantity">
         </label>
-        <label>
-            <input type="number" id="current-price">Enter the current-price of the stock
+        <label for="current-price">
+            Enter the current-price of the stock
+            <input type="number" id="current-price">
         </label>
         <button id="evaluate-btn">Check</button>
         <div id="output"></div>
