feat: added footer to the app

--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
         <button id="evaluate-btn">Check</button>
         <div id="output"></div>
     </div>
+    <footer class="footer">
+        <div class="footer-heading">
+            Connect With Me
+        </div>
+        <ul class="footer list-non-bullet">
+            <li class="list-item-inline">
+                <a href="https://github.com/shubh-37" class="link">GitHub</a>
+            </li>
+            <li class="list-item-inline">
+                <a href="https://twitter.com/shubh_37" class="link">Twitter</a>
+            </li>
+            <li class="list-item-inline">
+                <a href="https://www.linkedin.com/in/shubh-arya-08b54b200/" class="link">LinkedIn</a>
+            </li>
+        </ul>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
