refactor: added a page container to wrap the content and footer

--- a/index.html
+++ b/index.html
@@ -8,28 +8,29 @@
     <title>Stocks: Profit or Loss</title>
 </head>
 <body>
-    <div class="container">
-        <h1 class="heading">Evaluate your stocks</h1>
-        <label for="initial-price">
-            Enter the inital stock price
-            <input type="number" id="initial-price">
-        </label>
-        <label for="quantity">
-            Enter the quantity of the stock
-            <input type="number" id="quantity">
-        </label>
-        <label for="current-price">
-            Enter the current-price of the stock
-            <input type="number" id="current-price">
-        </label>
-        <button id="evaluate-btn">Check</button>
-        <div id="output"></div>
-    </div>
-    <footer class="footer">
-        <div class="footer-heading">
-            Connect With Me
+    <div class="page-container">
+        <div class="container">
+            <h1 class="heading">Evaluate your stocks</h1>
+            <label for="initial-price">
+                Enter the inital stock price
+                <input type="number" id="initial-price">
+            </label>
+            <label for="quantity">
+                Enter the quantity of the stock
+                <input type="number" id="quantity">
+            </label>
+            <label for="current-price">
+                Enter the current-price of the stock
+                <input type="number" id="current-price">
+            </label>
+            <button id="evaluate-btn">Check</button>
+            <div id="output"></div>
         </div>
-        <ul class="footer list-non-bullet">
+    <footer class="footer">
+        <span class="footer-heading">
+            Connect With Me
+        </span>
+        <ul class="list-non-bullet">
             <li class="list-item-inline">
                 <a href="https://github.com/shubh-37" class="link">GitHub</a>
             </li>
@@ -41,6 +42,7 @@
             </li>
         </ul>
     </footer>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
