refactor: changed the footer heading

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     <footer class="footer">
         <span class="footer-heading">
-            Connect With Me
+            Made By Shubh Arya
         </span>
         <ul class="list-non-bullet">
             <li class="list-item-inline">
